Some Bugs Fix 1 : grid overflow 2 : font size fix on small screens 3 : responsive smooth transition

--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
 hr {
     width: 90vw;
     color: #2E4343;
-    margin: 70px 0;
+    margin: 20px 0;
 }
 
 p {
@@ -153,11 +153,12 @@ a {
 
 .main-box {
     width: 90vw;
-    height: 400px;
+    /* height: 400px; */
     display: flex;
     border-radius: 3px;
     overflow: hidden;
     background-color: #d4e1e3;
+    align-items: center;
 
     /* border: 1px solid black; */
 
@@ -168,7 +169,7 @@ a {
     flex-direction: column;
     /* border: 1px solid black; */
     width: 50%;
-    height: 100%;
+    /* height: 100%; */
     align-items: center;
     justify-content: center;
     background-color: #d4e1e3;
@@ -228,7 +229,7 @@ a {
 
 .main-second {
     width: 50%;
-    height: 100%;
+    /* height: 100%; */
     /* border: 1px solid black; */
     transition: transform .2s;
     overflow: hidden;
@@ -252,7 +253,7 @@ a {
 
 .main-box2 {
     width: 90vw;
-    height: 620px;
+    /* height: 620px; */
     /* display: flex; */
     border-radius: 3px;
     overflow: hidden;
@@ -262,7 +263,7 @@ a {
 
 .navbar2 {
     display: flex;
-    height: 15%;
+    height: 100px;
     width: 100%;
     /* border: 1px solid black; */
     /* padding: 8px; */
@@ -300,7 +301,7 @@ a {
 
 .grid-box2 {
     width: 100%;
-    height: 85%;
+    /* height: 85%; */
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: 1fr;
@@ -311,7 +312,7 @@ a {
 
 .card {
     width: 100%;
-    height: 100%;
+    /* height: 100%; */
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -363,14 +364,14 @@ a {
 
 .Essentials {
     width: 90vw;
-    height: 850px;
+    /* height: 850px; */
     /* border: 1px solid black; */
     margin-block: 20px;
 }
 
 .top-nav {
     display: flex;
-    height: 8%;
+    height: 100px;
     width: 100%;
     /* border: 1px solid black; */
     /* padding: 8px; */
@@ -391,7 +392,7 @@ a {
 
 .product-box {
     width: 100%;
-    height: 84%;
+    /* height: 84%; */
     /* border: 1px solid black; */
     display: grid;
     grid-template-columns: repeat(4, 1fr);
@@ -437,7 +438,7 @@ a {
 
 .bottum-nav {
     width: 100%;
-    height: 8%;
+    height: 50px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -463,7 +464,7 @@ a {
 
 .cover-images {
     width: 100%;
-    height: 650px;
+    height: 100vh;
     /* border: 1px solid black; */
     display: flex;
     align-items: center;
@@ -475,7 +476,7 @@ a {
     justify-content: center;
     align-items: center;
     width: 49%;
-    height: 70%;
+    height: 80%;
     /* border: 1px solid black; */
     background-image: linear-gradient(rgba(67 64 64 / 50%), rgb(145 139 139 / 0%)), url("right-image1.jpg");
     background-size: 300px 300px;
@@ -491,7 +492,7 @@ a {
     justify-content: center;
     align-items: center;
     width: 49%;
-    height: 70%;
+    height: 80%;
     /* border: 1px solid black; */
     background-image: linear-gradient(rgba(67 64 64 / 50%), rgb(145 139 139 / 0%)), url("left-image.webp");
     background-size: cover;
@@ -554,10 +555,10 @@ a {
     border: 0.5px solid #2E4343;
     cursor: pointer;
 }
-
+/* Details Box */
 .detail {
     width: 90vw;
-    height: 450px;
+    /* height: 450px; */
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -570,7 +571,7 @@ a {
 
 .detail-cover {
     width: 40%;
-    height: 95%;
+    /* height: 95%; */
     /* border: 1px solid black;  */
     border-radius: 3px;
 
@@ -579,7 +580,7 @@ a {
 
 .detail-cover img {
     width: 100%;
-    height: 100%;
+    /* height: 100%; */
     transition: transform .2s;
 }
 
@@ -593,13 +594,13 @@ a {
     /* padding: 10px; */
     /* gap: 15px; */
     width: 50%;
-    height: 95%;
+    /* height: 95%; */
 
     /* border: 1px solid black; */
 }
 
 .detail_pera {
-    height: 20px;
+    /* height: 20px; */
     font-size: 12px;
     font-family: "Inter", serif;
     font-optical-sizing: auto;
@@ -724,7 +725,7 @@ a {
 
 .animation {
     width: 90vw;
-    height: 500px;
+    height: 70vh;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -736,7 +737,7 @@ a {
 
 .gif-image {
     width: 100%;
-    height: 90%;
+    height: 100%;
     /* border: 1px solid black; */
     display: flex;
     justify-content: center;
@@ -844,7 +845,7 @@ a {
 /* Scroll Container */
 .scroll-container {
     width: 90vw;
-    height: 500px;
+    /* height: 500px; */
     display: flex;
     flex-direction: column;
     overflow: hidden;
@@ -856,7 +857,7 @@ a {
 
 .scroll-titles {
     width: 100%;
-    height: 23%;
+    height: 100px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -867,7 +868,7 @@ a {
 
     display: grid;
     width: 100%;
-    height: 77%;
+    /* height: 77%; */
     grid-template-columns: repeat(4, 1fr);
     row-gap: 25px;
     column-gap: 25px;
@@ -908,7 +909,7 @@ a {
     font-style: normal;
     /* text-align: center; */
     color: #2E4343;
-    margin-top: 1rem;
+    padding: 1rem;
     /* border: 1px solid black; */
 
 }
@@ -1383,11 +1384,9 @@ a {
         width: 100%;
         height: 60%;
     }
-
-    .main-box2 {
-        height: 1000px;
+    .navbar2 h1{
+        font-size: 30px;
     }
-
     .grid-box2 {
         grid-template-columns: repeat(2, 1fr);
         grid-template-rows: repeat(2, 1fr);
@@ -1411,7 +1410,7 @@ a {
 
     .scroll-box {
         grid-template-columns: repeat(2, 1fr);
-        grid-template-rows: 1;
+        
     }
 
     .card_hide {
@@ -1463,9 +1462,7 @@ a {
         height: 50%;
     }
 
-    .main-box2 {
-        height: 2100px;
-    }
+   
 
     .grid-box2 {
         grid-template-columns: 1fr;
@@ -1503,12 +1500,24 @@ a {
         font-size: 0.9rem;
     }
 
+    .gif-containt h1 {
+       
+        font-size: 24px;
+    }
+    .countdown-box {
+       
+        width: 4rem;
+       
+    }
+    .count-number{
+        font-size: 30px;
+    }
     .scroll-titles {
         height: 40%;
         text-align: center;
     }
 
-    .scroll-box {
-        height: 60%;
+    .service-detail>h3 {
+        font-size: 1.1rem;
     }
 }
